Wed Oct 06 15:04:23 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* WebServer.h: Fixed typo in parameter name.

Wed Oct 06 13:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Allow a database transaction to already have been
	begun when [SQLTransactiuon-execute] is called, so we can have
	queries in the same database transaction as a list of statements.

Wed Oct 06 06:15:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Make the rollback opoeration a safe no-op if
	there is no transaction in progress.
	* Postgres.m: Improve exception text by reporting the offending
	SQL statement(s).

Fri Sep 17 16:55:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: When reporting the duration of a commit or
	rollback, report text of all the statements in the transaction.

Fri Aug 28 09:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.[hm]: Add support for limiting maximum number of incoming
	sessions permitted from mone host.

Tue Aug 24 14:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.[hm]: Add support for HTTP/1.1 persistent connections.

Sun Aug 22 10:35:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.[hm]: Add ([SQLRecord-dictionary]) and tidy/comment the
	class a bit better.

Sat Aug 07 14:25:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Add session timeouts to kill off idle sessions.

Tue Jul 27 17:30:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

        * configure.ac: Give more help when postgres is not found.
	* configure: regenerate
		
Mon Jul 26 09:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.h: Add -transaction method and SQLTransaction class
	* SQLClient.m: Implement -transaction method and SQLTransaction class
	to provide a simple convenient mechanism for executing a sequence
	of statements as a single transaction.

Thu Jul 15 09:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
